--- a/autor.html
+++ b/autor.html
@@ -15,6 +15,7 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="detanhes.html">Novidades</a></li>
             <li><a href="autor.html">Autor</a></li>
+            <li><a href="login.html">Administrativo</a></li>
         </ul>
     </nav>
         <a href="carrinho.html">
@@ -31,7 +32,7 @@
                 Encontro-me intensamente focado nessa transição, dedicando tempo significativo para aprofundar meus conhecimentos, conduzindo pesquisas em diversas fontes especializadas.
                 A minha dedicação a essa nova jornada está equiparada à minha disposição para adquirir conhecimentos. Estou comprometido em seguir a trilha da Tecnologia da Informação, visualizando-a como o próximo passo natural na minha trajetória profissional.</p>
         </section>
-    </main>
+    </main><br><br>
     <footer>
         Desenvolvido por José Thiago Barbosa Luz
     </footer>
