--- a/detanhes.html
+++ b/detanhes.html
@@ -15,6 +15,7 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="detanhes.html">Novidades</a></li>
             <li><a href="autor.html">Autor</a></li>
+            <li><a href="login.html">Administrativo</a></li>
         </ul>
     </nav>
         <a href="carrinho.html">
@@ -47,9 +48,10 @@
                 cosméticos são enriquecidos com vitaminas e
                 antioxidantes, proporcionando hidratação</p>
         </section>
-    </main>
+    </main><br><br>
     <footer>
-        Desenvolvido por José Thiago Barbosa Luz
+        Desenvolvido por José Thiago Barbosa Luz<br><br>
+        <a href="autor.html">Saiba mais sobre o Autor</a>
     </footer>
 </body>
 </html>
