--- a/login.html
+++ b/login.html
@@ -22,13 +22,18 @@
         <img src="imagens/carrinho_de_compras.png" alt="Carrinho de Compras" style="width: 30px;"></a>
     <main>
         <section>
-            <h1>Descubra a Nova Linha Flora</h1>
-            <p>Estamos entusiasmados em apresentar a nova linha de cosméticos da Amarilis, a Linha Flora. Inspirada na beleza e na diversidade da natureza, cada produto desta coleção é uma homenagem à flora exuberante que nos cerca.</p>
-        </section>
-        <section>
-            <img src="imagens/seta_esquerda.png" alt="Seta Esquerda" style="width: 10px;"></a>
-            <img src="imagens/kit_01.png" alt="Kit de Produtos 01" style="width: 300px;"></a>
-            <img src="imagens/seta_direita.png" alt="Seta Direita" style="width: 10px;"></a>
+            <h1>Faça seu Login:</h1>
+            <form action="/action_page.php">
+                <fieldset style="width: 400px;">  
+                    <legend>Login:</legend>
+                    <label for="email">E-mail:</label><br>
+                    <input type="text" id="email" name="email"><br>
+                    <label for="senha">Senha:</label><br>
+                    <input type="password" id="senha" name="senha"><br><br>
+                    <input type="submit" value="Entrar"><br>
+                    <a href="cadastro_de_usuarios.html">Cadastre-se aqui</a>
+                </fieldset><br><br>
+            </form>
         </section>
     </main><br><br>
     <footer>
