--- a/index.html
+++ b/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <title>Amarilís</title>
-    <meta charset="utf-8"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Site</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Atividade Desenvolvimento Web I</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Novidades</a></li>
+            </ul>
+        </nav>
     </header>
-    <a href="index.html">
-    <img src="imagens/logotipo_amarilis.png" alt="Logo Amarílis" style="width: 200px;"></a>
-    <nav>
-        <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="detanhes.html">Novidades</a></li>
-            <li><a href="autor.html">Autor</a></li>
-            <li><a href="login.html">Administrativo</a></li>
-        </ul>
-    </nav>
-        <a href="carrinho.html">
-        <img src="imagens/carrinho_de_compras.png" alt="Carrinho de Compras" style="width: 30px;"></a>
     <main>
         <section>
-            <h1>Descubra a Nova Linha Flora</h1>
-            <p>Estamos entusiasmados em apresentar a nova linha de cosméticos da Amarilis, a Linha Flora. Inspirada na beleza e na diversidade da natureza, cada produto desta coleção é uma homenagem à flora exuberante que nos cerca.</p>
+            <div class="container">
+                <div>
+                    <p>Lorem ipsum inventore impedit, ducimus, vel omnis autemdolor sit amet consectetur adipisicing vel autem, aperiam ex dolorem omnis eligendi expedita esse culpa totamelit. Inventore impedit, ducimus, vel omnis autem, mollitia possimus eveniet quam delectus aliquid ex! Deleniti eius quidem sed ducimus dolorum. Eligendi, aliquam consequatur?
+                    </p>
+                </div>
+            </div>
+            <div class="caixa">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, fugiat sed autem obcaecati quisquam reprehenderit doloremque dolores placeat at, facere esse error sit porro eius voluptatibus mollitia ab iste. Tempore!
+                </p>
+                <div class="caixa1">
+                    <p>Lorem ipsum dum dolorum, vel autem, aperiam ex dolorem omnis eligendi expedita esse culpa totam beatae sunt.</p>
+                </div>
+                <div class="caixa2">
+                    <p>Lorem ipsum dum dolorum, vel autem, aperiam ex dolorem omnis eligendi expedita esse culpa totam beatae sunt.</p>
+                </div>
+            </div>
         </section>
-        <section>
-            <img src="imagens/seta_esquerda.png" alt="Seta Esquerda" style="width: 10px;"></a>
-            <img src="imagens/kit_01.png" alt="Kit de Produtos 01" style="width: 300px;"></a>
-            <img src="imagens/seta_direita.png" alt="Seta Direita" style="width: 10px;"></a>
-        </section>
-    </main><br><br>
+    </main>
+
     <footer>
-        Desenvolvido por José Thiago Barbosa Luz<br><br>
-        <a href="autor.html">Saiba mais sobre o Autor</a>
+        <p>Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
